--- a/style.css
+++ b/style.css
@@ -3,4 +3,37 @@ body{
 }
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+nav > ul {
+    display: flex;
+    align-items: center;
+}
+nav li{
+    list-style: none;
+    margin-right: 50px;
+    
+}
+nav a{
+    text-decoration: none;
+    color: #474747;
+}
+.nav-tital{
+    color: #181818);
+    font-size: 45px;
+    font-weight: 800;
+
+}
+.text-primari{
+    color: #FD6E0A;
+}
+.btn-primary{
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: 0;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 700px;
+    padding: 20px 35px;
 }
