--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 200px;
 }
 nav > ul {
     display: flex;
@@ -13,11 +14,12 @@ nav > ul {
 nav li{
     list-style: none;
     margin-right: 50px;
-    
+   
 }
 nav a{
     text-decoration: none;
     color: #474747;
+    
 }
 .nav-tital{
     color: #181818);
@@ -36,4 +38,54 @@ nav a{
     font-size: 20px;
     font-weight: 700px;
     padding: 20px 35px;
+}
+.header{
+    background-color: #FFF8F3;;
+}
+.bannar{
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    background-image: url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    justify-content: space-between;
+}
+.bannar-content{
+    max-width: 500px;
+}
+.bannar .bannar-pic{
+    width: 500px;
+}
+.bannar-hed{
+    color: #474747;
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+.bannar-titel{
+    color: #181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-discription{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
 }
