--- a/style.css
+++ b/style.css
@@ -89,3 +89,41 @@ nav a{
     font-size: 18px;
     font-weight: 400;
 }
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-info-containar{
+    display: flex;
+    justify-content: space-between;
+}
+.info{
+    text-align: center;
+    color: #474747;
+    font-size: 15px;
+    line-height: 10px;
+}
+.about-discription{
+    font-weight: 700;
+    font-size: 20px;
+}
+.section-discription{
+    padding: 30px 150px
+}
+.skills-containar{
+    display: flex;
+    padding: 30px
+    gap: 24px;
+}
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+}
+.skills-discription{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
